// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CurricModalErrorContent should render additional when supplied 1`] = `
<div>
  <div
    class="sc-fqkvVR sc-kAyceB kRjBvS FywIr"
  >
    <h1
      class="sc-kpDqfm sc-c9371ddb-0 jeWvUz hmfNXu"
    >
      404
    </h1>
    <h2
      class="sc-kpDqfm cCIhAo"
    >
      Missing!
    </h2>
    <p
      class="sc-dLMFU eFqtPi"
    >
      Close this modal
    </p>
  </div>
</div>
`;

exports[`CurricModalErrorContent should render correctly 1`] = `
<div>
  <div
    class="sc-fqkvVR sc-kAyceB kRjBvS FywIr"
  >
    <h1
      class="sc-kpDqfm sc-c9371ddb-0 jeWvUz hmfNXu"
    >
      404
    </h1>
    <h2
      class="sc-kpDqfm cCIhAo"
    >
      Missing!
    </h2>
  </div>
</div>
`;
